# TFG

./: README.md  objectives.md  reuniones
commands/: CMakeLists.txt  package.xml
commands/src/: command.cpp
commands/src/commandNode/: command_node.cpp  command_node.h
memoria/: bibliografia.bib  estilo.tex  memoria.tex
memoria/anexos/: anexo1.tex  anexo2.tex  anexo3.tex  anexo4.tex
memoria/capitulos/: capitulo1.tex  capitulo1.tex.bak  capitulo2.tex  capitulo2.tex.bak  capitulo3.tex  capitulo3.tex.bak  capitulo4.tex  capitulo4.tex.bak  capitulo5.tex  capitulo5.tex.bak  capitulo6.tex
memoria/portada/: abstract.tex  acronimos.tex  agradecimientos.tex  indice.tex  licencia.tex  portada.tex  resumen.tex
neurobot_graphics/: CMakeLists.txt  instrucciones.md  package.xml  ros_connection.uxf
neurobot_graphics/include/neurobot_graphics/: control_node.hpp  main_node.hpp  main_node_sliders.hpp  motorControl.h
neurobot_graphics/scripts/: database.py  flappy_bird.py  flappy_bird_viewer.py  plot_signal.py  scroll_publisher.py  signal_plotter.py
neurobot_graphics/src/: control_node.cpp  main_node.cpp  main_node_sliders.cpp  motorControl.cpp
objetivos/: obj_abr.md  obj_feb.md  obj_mar.md  obj_may.md
set_constraints_srv/: CMakeLists.txt  package.xml
set_constraints_srv/srv/: SetConstraintsSrv.srv
