<?xml version="1.0"?>
<package format="3">
  <name>neurobot_graphics</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="s.peralesdiez@gmail.com">sofiaprlsd</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>set_constraints_srv</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>